기본배송지 설정 #157 DB설계 수정으로 인한 코드 변경 model 수정 기본배송지 설정 코드

--- a/agijagi/app/src/main/res/layout/item_shipping_management.xml
+++ b/agijagi/app/src/main/res/layout/item_shipping_management.xml
@@ -39,6 +39,7 @@
             android:textStyle="bold"
             android:textColor="@color/jagi_carrot"
             android:layout_marginStart="8dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/checkBox_shipping_management_basic"
             app:layout_constraintTop_toTopOf="@+id/checkBox_shipping_management_basic"
             app:layout_constraintStart_toEndOf="@+id/textView_shipping_management_title"/>
