Feat: buyer db 추가, navigation #193 login tool bar ui 추가

--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -350,7 +350,7 @@
 
     <fragment
         android:id="@+id/signupSelectFragment"
-        android:name="likelion.project.agijagi.signup.SignupSelectFragment"
+        android:name="likelion.project.agijagi.signup.ui.SignupSelectFragment"
         android:label="fragment_signup_select"
         tools:layout="@layout/fragment_signup_select">
         <action
