--- a/agijagi/app/src/main/res/layout/fragment_product_detail_preview.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_detail_preview.xml
@@ -26,7 +26,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageview_product_detail_preview_image1"
+                android:id="@+id/imageview_product_detail_preview_thumbnail_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
@@ -89,6 +89,14 @@
                 android:text="기본적인 블랙 색상의 깔끔한 디자인과 다양한 디자인으로 쓰임이 많은 도자기 그릇입니다. 도자기 재질로 무게감이 있어 안정적으로.."
                 android:textAlignment="center"
                 android:textSize="12sp" />
+
+            <ImageView
+                android:id="@+id/imageview_product_detail_preview_image1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/product_detail_default_image" />
 
             <ImageView
                 android:id="@+id/imageview_product_preview_detail_image2"
