--- a/agijagi/app/src/main/res/layout/fragment_product_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_list.xml
@@ -27,12 +27,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_product_list" />
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_product_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_product_list">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/item_product_list_shimmer"/>
+            <include layout="@layout/item_product_list_shimmer"/>
+            <include layout="@layout/item_product_list_shimmer"/>
+            <include layout="@layout/item_product_list_shimmer"/>
+            <include layout="@layout/item_product_list_shimmer"/>
+            <include layout="@layout/item_product_list_shimmer"/>
+            <include layout="@layout/item_product_list_shimmer"/>
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <TextView
         android:id="@+id/textView_product_list_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="등록된 판매상품이 없습니다"
         android:textSize="16sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
