--- a/agijagi/app/src/main/res/layout/fragment_product_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_detail.xml
@@ -26,22 +26,35 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageview_product_detail_thumbnail_image"
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout_product_detail_thumbnail_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/product_detail_default_image" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textview_product_detail_brand"
+                <ImageView
+                    android:id="@+id/imageview_product_detail_thumbnail_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/product_detail_default_image" />
+
+            </io.supercharge.shimmerlayout.ShimmerLayout>
+
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:text="브랜드명"
-                android:textColor="@color/brand_name"
-                android:textSize="14dp" />
+                app:shimmer_angle="0">
+
+                <TextView
+                    android:id="@+id/textview_product_detail_brand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="24dp"
+                    android:textColor="@color/brand_name"
+                    android:textSize="14dp" />
+            </io.supercharge.shimmerlayout.ShimmerLayout>
 
             <TextView
                 android:id="@+id/textview_product_detail_name"
@@ -49,7 +62,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:text="제품명 도자기"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -59,7 +71,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
-                android:text="150,000원"
                 android:textSize="14dp" />
 
             <View
@@ -75,7 +86,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="24dp"
-                android:text="제품명 도자기 .."
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -87,57 +97,93 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="40dp"
-                android:text="기본적인 블랙 색상의 깔끔한 디자인과 다양한 디자인으로 쓰임이 많은 도자기 그릇입니다. 도자기 재질로 무게감이 있어 안정적으로.."
                 android:textAlignment="center"
                 android:textSize="12sp" />
 
-            <ImageView
-                android:id="@+id/imageview_product_detail_image1"
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout_product_detail_image1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/product_detail_default_image" />
+                android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/imageview_product_detail_image2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/product_detail_default_image" />
+                <ImageView
+                    android:id="@+id/imageview_product_detail_image1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/product_detail_default_image" />
 
-            <ImageView
-                android:id="@+id/imageview_product_detail_image3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/product_detail_default_image" />
+            </io.supercharge.shimmerlayout.ShimmerLayout>
 
-            <ImageView
-                android:id="@+id/imageview_product_detail_image4"
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout_product_detail_image2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/product_detail_default_image" />
+                android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/imageview_product_detail_image5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/product_detail_default_image" />
+                <ImageView
+                    android:id="@+id/imageview_product_detail_image2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/product_detail_default_image" />
+            </io.supercharge.shimmerlayout.ShimmerLayout>
 
-            <ImageView
-                android:id="@+id/imageview_product_detail_image6"
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout_product_detail_image3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/product_detail_default_image" />
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageview_product_detail_image3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/product_detail_default_image" />
+            </io.supercharge.shimmerlayout.ShimmerLayout>
+
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout_product_detail_image4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageview_product_detail_image4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/product_detail_default_image" />
+            </io.supercharge.shimmerlayout.ShimmerLayout>
+
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout_product_detail_image5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageview_product_detail_image5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/product_detail_default_image" />
+            </io.supercharge.shimmerlayout.ShimmerLayout>
+
+            <io.supercharge.shimmerlayout.ShimmerLayout
+                android:id="@+id/shimmerLayout_product_detail_image6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageview_product_detail_image6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/product_detail_default_image" />
+            </io.supercharge.shimmerlayout.ShimmerLayout>
 
         </LinearLayout>
 
