Feat: 커스텀 상품 상세 화면 상품 정보 로드 기능 구현 #238

--- a/agijagi/app/src/main/res/layout/fragment_custom_product_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_custom_product_detail.xml
@@ -30,12 +30,19 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageview_custom_product_detail_thumbnail_image"
+                <io.supercharge.shimmerlayout.ShimmerLayout
+                    android:id="@+id/shimmerLayout_custom_product_detail_thumbnail_image"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/product_detail_default_image" />
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageview_custom_product_detail_thumbnail_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/product_detail_default_image" />
+
+                </io.supercharge.shimmerlayout.ShimmerLayout>
 
                 <TextView
                     android:id="@+id/textview_custom_product_detail_brand"
@@ -43,7 +50,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
-                    android:text="브랜드명"
                     android:textColor="@color/brand_name"
                     android:textSize="14dp" />
 
@@ -53,7 +59,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="제품명 도자기"
                     android:textSize="16dp"
                     android:textStyle="bold" />
 
@@ -63,7 +68,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="4dp"
-                    android:text="150,000원"
                     android:textSize="14dp" />
 
                 <LinearLayout
@@ -100,8 +104,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="12dp"
-                            android:autoSizeTextType="uniform"
                             android:text="이 상품은 구매자의 요청에 따라 개별 주문 제작되며 판매자에 의해 취소/반품/교환이 제한될 수 있습니다."
+                            android:autoSizeTextType="uniform"
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -121,7 +125,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="24dp"
-                    android:text="제품명 도자기 .."
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
@@ -132,58 +135,99 @@
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="40dp"
                     android:layout_marginTop="16dp"
-                    android:text="기본적인 블랙 색상의 깔끔한 디자인과 다양한 디자인으로 쓰임이 많은 도자기 그릇입니다. 도자기 재질로 무게감이 있어 안정적으로 .."
                     android:textAlignment="center"
                     android:textSize="12sp" />
 
-                <ImageView
-                    android:id="@+id/imageview_custom_product_detail_image1"
+                <io.supercharge.shimmerlayout.ShimmerLayout
+                    android:id="@+id/shimmerLayout_custom_product_detail_image1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/product_detail_default_image" />
+                    android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/imageview_custom_product_detail_image2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/product_detail_default_image" />
+                    <ImageView
+                        android:id="@+id/imageview_custom_product_detail_image1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/product_detail_default_image" />
 
-                <ImageView
-                    android:id="@+id/imageview_custom_product_detail_image3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/product_detail_default_image" />
+                </io.supercharge.shimmerlayout.ShimmerLayout>
 
-                <ImageView
-                    android:id="@+id/imageview_custom_product_detail_image4"
+                <io.supercharge.shimmerlayout.ShimmerLayout
+                    android:id="@+id/shimmerLayout_custom_product_detail_image2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/product_detail_default_image" />
+                    android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/imageview_custom_product_detail_image5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/product_detail_default_image" />
+                    <ImageView
+                        android:id="@+id/imageview_custom_product_detail_image2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/product_detail_default_image" />
 
-                <ImageView
-                    android:id="@+id/imageview_custom_product_detail_image6"
+                </io.supercharge.shimmerlayout.ShimmerLayout>
+
+                <io.supercharge.shimmerlayout.ShimmerLayout
+                    android:id="@+id/shimmerLayout_custom_product_detail_image3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="40dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/product_detail_default_image" />
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageview_custom_product_detail_image3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/product_detail_default_image" />
+
+                </io.supercharge.shimmerlayout.ShimmerLayout>
+
+                <io.supercharge.shimmerlayout.ShimmerLayout
+                    android:id="@+id/shimmerLayout_custom_product_detail_image4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageview_custom_product_detail_image4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/product_detail_default_image" />
+
+                </io.supercharge.shimmerlayout.ShimmerLayout>
+
+                <io.supercharge.shimmerlayout.ShimmerLayout
+                    android:id="@+id/shimmerLayout_custom_product_detail_image5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageview_custom_product_detail_image5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/product_detail_default_image" />
+
+                </io.supercharge.shimmerlayout.ShimmerLayout>
+
+                <io.supercharge.shimmerlayout.ShimmerLayout
+                    android:id="@+id/shimmerLayout_custom_product_detail_image6"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageview_custom_product_detail_image6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="40dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/product_detail_default_image" />
+
+                </io.supercharge.shimmerlayout.ShimmerLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
