Feat: 스플래시 스크린 #246
그라데이션을 넣기 위해 별도의 스플래시 화면을 구성함

--- a/agijagi/app/src/main/res/values/themes.xml
+++ b/agijagi/app/src/main/res/values/themes.xml
@@ -43,8 +43,8 @@
     <!-- Splash Screen -->
     <style name="AppTheme.Splash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/jagi_brown</item>
+        <item name="android:windowDisablePreview">true</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
-        <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.Agijagi</item>
     </style>
 
