--- a/agijagi/app/src/main/res/layout/item_shipping_management.xml
+++ b/agijagi/app/src/main/res/layout/item_shipping_management.xml
@@ -17,6 +17,7 @@
             style="@style/CustomCheckBoxSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
