Design: no_login_mypage ui #262 (#265)
* Design: no Login 상태 my page 로그인 ui 변경 #259
login 안했을 때 하단 네비게이션에서 mypage를 클릭 시
로그인 text의 ui 변경

* Design: no Login 상태 my page 로그인 ui 변경 #259
login 안했을 때  mypage ui 변경

--- a/agijagi/app/src/main/res/layout/fragment_no_login_mypage.xml
+++ b/agijagi/app/src/main/res/layout/fragment_no_login_mypage.xml
@@ -14,7 +14,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/menu_buyer_my_page"
         app:title="내 정보" />
 
     <TextView
@@ -64,15 +63,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <androidx.appcompat.widget.AppCompatButton
+            <TextView
                 android:id="@+id/textview_my_page_login"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@color/jagi_ivory"
+                android:clickable="true"
                 android:text="로그인"
-                android:textSize="18sp" />
+                android:textSize="17sp" />
+
+            <View
+                android:id="@+id/line_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/line_1" />
 
         </LinearLayout>
 
