Feat: 검색 결과 도출 방법 수정 및 shimmer 적용 #173 검색창에서 엔터 눌렀을 때도 검색 결과가 도출되게 수정

--- a/agijagi/app/src/main/res/layout/fragment_search_result.xml
+++ b/agijagi/app/src/main/res/layout/fragment_search_result.xml
@@ -22,4 +22,32 @@
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="16dp" />
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_frame_layout_search_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="16dp">
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnCount="2">
+
+            <include layout="@layout/item_search_result_shimmer" />
+
+            <include layout="@layout/item_search_result_shimmer" />
+
+            <include layout="@layout/item_search_result_shimmer" />
+
+            <include layout="@layout/item_search_result_shimmer" />
+
+            <include layout="@layout/item_search_result_shimmer" />
+
+            <include layout="@layout/item_search_result_shimmer" />
+
+        </GridLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
 </LinearLayout>
