--- a/agijagi/app/src/main/res/layout/item_search_result_shimmer.xml
+++ b/agijagi/app/src/main/res/layout/item_search_result_shimmer.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="4dp"
-    android:layout_marginBottom="16dp"
-    android:orientation="vertical">
+    android:paddingBottom="16dp"
+    android:orientation="vertical"
+    android:paddingHorizontal="4dp">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cardview_search_search_result"
-        android:layout_width="wrap_content"
+        android:id="@+id/cardview_search_result_shimmer"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,7 +17,7 @@
         app:strokeColor="@color/jagi_brown">
 
         <ImageView
-            android:id="@+id/imageview_search_search_result_image"
+            android:id="@+id/imageview_search_result_image_shimmer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -28,26 +28,29 @@
 
     <TextView
         android:id="@+id/textview_search_search_result_brand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="56dp"
+        android:layout_height="16dp"
         android:layout_marginTop="8dp"
+        android:background="#9F9F9F"
         android:textColor="@color/brand_name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardview_search_search_result" />
+        app:layout_constraintTop_toBottomOf="@id/cardview_search_result_shimmer" />
 
     <TextView
         android:id="@+id/textview_search_search_result_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="16dp"
         android:layout_marginTop="4dp"
-        android:textStyle="bold"
+        android:background="#9F9F9F"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_search_search_result_brand" />
 
     <TextView
         android:id="@+id/textview_search_search_result_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="68dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="0.5dp"
+        android:background="#9F9F9F"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_search_search_result_name" />
 
